fix: address regressions from firebase-removal refactor